fix: text wrapping in a component

--- a/frontend/src/ui/chatСloud/index.module.scss
+++ b/frontend/src/ui/chatСloud/index.module.scss
@@ -15,6 +15,7 @@
   width: max-content;
   height: max-content;
   min-width: max(200px, 10vw);
+  max-width:  max(300px, 13vw);
 
   display: flex;
   flex-direction: column;
@@ -23,6 +24,7 @@
   padding: max(5px, 0.5vh) max(5px, 0.5vw);
   padding-top: max(15px, 1.5vh);
   background-color: $siteColor;
+  word-wrap: break-word;
 
   &:after {
     content: "";
